--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="/">Your Name</a>
+      <a href="/">Harsh rajpurohit</a>
     </div>
 
     <div class="right">
@@ -44,8 +44,8 @@
     <!-- SECTION 1: Hero -->
     <section class="hero-section">
       <div class="text">
-        <h2>Hi, I'm Jay 👋</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsam assumenda est perspiciatis labore quasi, iure dignissimos, libero, omnis sint necessitatibus ad. Hic expedita eligendi tenetur quisquam id quaerat alias cumque, autem voluptatem in iure ut laudantium tempora cupiditate voluptate est nemo impedit, quidem iusto, provident aperiam. Iste, repellat aperiam!</p>
+        <h2>Hi, I'm Harsh 👋</h2>
+        <p>Lorem ipsdolor sit amet consectetur adipisicing elit. Rem ipsam assumenda est perspiciatis labore quasi, iure dignissimos, libero, omnis sint necessitatibus ad. Hic expedita eligendi tenetur quisquam id quaerat alias cumque, autem voluptatem in iure ut laudantium tempora cupiditate voluptate est nemo impedit, quidem iusto, provident aperiam. Iste, repellat aperiam!</p>
 
         <div class="links">
           <a href="#skills">
